--- a/css/style.comp.css
+++ b/css/style.comp.css
@@ -382,13 +382,20 @@ img.responsive {
     height: 8rem;
     border-radius: 50%;
     justify-self: center;
-    z-index: 20; }
+    z-index: 20;
+    display: flex;
+    align-items: center;
+    justify-content: center; }
     .grid-item__circle--1 {
       background-color: #455aa4; }
     .grid-item__circle--2 {
       background-color: #7bbce8; }
     .grid-item__circle--3 {
       background-color: #ed7d26; }
+  .grid-item__icon {
+    width: 5rem;
+    height: 5rem;
+    fill: #fff; }
   .grid-item__text {
     padding: 5rem 3rem 3rem 3rem;
     border-radius: .5rem;
@@ -558,6 +565,118 @@ img.responsive {
     text-align: justify;
     border-left: 0.5rem solid #455aa4; }
 
+.course {
+  -webkit-box-shadow: 0px 0.5rem 0.5rem 0px rgba(0, 0, 0, 0.1);
+  -moz-box-shadow: 0px 0.5rem 0.5rem 0px rgba(0, 0, 0, 0.1);
+  box-shadow: 0px 0.5rem 0.5rem 0px rgba(0, 0, 0, 0.1);
+  display: flex;
+  flex-direction: column;
+  align-items: center; }
+  .course__img {
+    display: block;
+    width: 100%;
+    height: auto; }
+  .course__duration {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    margin-top: 1rem; }
+  .course__icon {
+    width: 2rem;
+    height: 2rem;
+    fill: #7bbce8; }
+  .course__title {
+    font-size: 1.8rem;
+    font-weight: bold;
+    color: #455aa4;
+    text-transform: uppercase;
+    margin-top: 1rem; }
+  .course__description {
+    padding: 2rem;
+    padding-top: 1rem;
+    text-align: justify; }
+
+.accordion {
+  display: grid;
+  grid-template-columns: 3fr 9fr;
+  grid-template-rows: min-content;
+  row-gap: 5rem;
+  column-gap: 5rem; }
+  @media only screen and (max-width: 56.25em) {
+    .accordion {
+      grid-template-columns: 100%;
+      grid-template-rows: 20rem auto; } }
+  .accordion--primary .accordion__bar {
+    background-color: #455aa4; }
+  .accordion--primary .accordion__heading {
+    color: #fff; }
+  .accordion--primary .accordion__btn {
+    background-color: #3c3c3c; }
+    .accordion--primary .accordion__btn::before, .accordion--primary .accordion__btn::after {
+      background-color: #f0f0f0; }
+  .accordion__img {
+    grid-column: 1 / 2;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center; }
+    @media only screen and (max-width: 56.25em) {
+      .accordion__img {
+        grid-row: 1 / 2; } }
+    .accordion__img--1 {
+      background-image: url("../img/course.jpg"); }
+  .accordion__content {
+    grid-column: 2 / 3; }
+    @media only screen and (max-width: 56.25em) {
+      .accordion__content {
+        grid-column: 1 / 2;
+        grid-row: 2 / 3; } }
+  .accordion__item {
+    display: flex;
+    flex-direction: column; }
+    .accordion__item:not(:last-of-type) {
+      margin-bottom: 1rem; }
+  .accordion__bar {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    cursor: pointer; }
+  .accordion__bar.active .accordion__btn::before, .accordion__bar.active .accordion__btn::after {
+    transform: translate(-50%, -50%) rotate(45deg); }
+  .accordion__heading {
+    padding: 0 1.5rem;
+    flex: 1;
+    font-size: 2rem;
+    font-weight: bold;
+    text-transform: uppercase; }
+  .accordion__btn {
+    height: 4rem;
+    width: 4rem;
+    position: relative; }
+    .accordion__btn::before, .accordion__btn::after {
+      content: "";
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform-origin: 50% 50%;
+      transform: translate(-50%, -50%) rotate(0);
+      transition: transform .2s; }
+    .accordion__btn::before {
+      width: 50%;
+      height: .4rem; }
+    .accordion__btn::after {
+      width: .4rem;
+      height: 50%; }
+  .accordion__aspect-ratio {
+    height: 100%;
+    width: auto; }
+  .accordion__content {
+    display: none;
+    padding: 2rem;
+    background-color: #fafafa; }
+  .accordion__text {
+    font-size: 1.8rem;
+    font-weight: 300; }
+
 .row {
   width: 100%;
   max-width: 140rem;
@@ -565,10 +684,15 @@ img.responsive {
   padding: 0 5rem; }
   @media only screen and (max-width: 56.25em) {
     .row {
-      max-width: 60rem; } }
+      max-width: 100%; } }
   @media only screen and (max-width: 37.5em) {
     .row {
-      padding: 0 1.5rem;
+      padding: 0 1.5rem; } }
+  @media only screen and (max-width: 56.25em) {
+    .row--respond {
+      max-width: 60rem; } }
+  @media only screen and (max-width: 37.5em) {
+    .row--respond {
       max-width: 100%; } }
 
 .grid {
@@ -635,7 +759,7 @@ img.responsive {
 .footer {
   padding-top: 10rem;
   padding-bottom: 5rem;
-  background-color: #1e1e1e; }
+  background-color: #455aa4; }
   .footer__logo {
     width: 100%;
     height: auto;
@@ -664,19 +788,49 @@ img.responsive {
     width: 2.5rem;
     height: 2.5rem;
     margin-right: 1rem;
-    fill: #fff; }
+    fill: #7bbce8; }
   .footer__link, .footer__link:active, .footer__link:focus, .footer__link:visited {
-    color: #aaaaaa;
+    color: #fff;
     text-decoration: none; }
   .footer__link:hover {
     color: #fff;
     text-decoration: underline; }
   .footer__text {
-    color: #aaaaaa; }
+    color: #fff; }
   .footer__legal {
-    color: #3c3c3c; }
+    color: #fff; }
   @media only screen and (max-width: 56.25em) {
     .footer__filler {
       display: none; } }
   .footer__filler::before {
     content: " "; }
+  .footer__newsletter {
+    margin-bottom: .5rem;
+    display: flex;
+    flex-direction: row;
+    align-items: stretch;
+    width: 100%; }
+  .footer__input {
+    outline-color: #7bbce8;
+    font-size: 1.8rem;
+    border: 0;
+    margin: 0;
+    flex: 1; }
+  .footer__submit {
+    font-family: inherit;
+    font-weight: 400;
+    font-size: 1.8rem;
+    text-transform: uppercase;
+    margin: 0;
+    padding: .5rem 1rem;
+    border-radius: unset;
+    color: #fff;
+    outline-color: currentColor;
+    background-color: #ed7d26;
+    border: 0; }
+
+.splide__slide {
+  padding: 2.5rem; }
+  @media only screen and (max-width: 56.25em) {
+    .splide__slide {
+      padding: 1rem; } }
