--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -11,6 +11,7 @@
 @import 'components/timeline';
 @import 'components/profiles';
 @import 'components/course';
+@import 'components/languages';
 
 @import 'layout/grid';
 @import 'layout/header';
