--- a/src/sass/abstracts/_mixins.scss
+++ b/src/sass/abstracts/_mixins.scss
@@ -41,3 +41,18 @@
         };
     }
 }
+
+
+@mixin dropdown {
+    position: absolute;
+    top: 100%;
+    left: 50%;
+    transform: translateX(-50%);
+    border-top: 1px solid $color-grey-light-2;
+    border-bottom-left-radius: .3rem;
+    border-bottom-right-radius: .3rem;
+    background-color: #fff;
+    -webkit-box-shadow: 0px .5rem .5rem 0px rgba(0,0,0,0.1);
+    -moz-box-shadow: 0px .5rem .5rem 0px rgba(0,0,0,0.1);
+    box-shadow: 0px .5rem .5rem 0px rgba(0,0,0,0.1);
+}
