--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -54,3 +54,13 @@ img.responsive {
     &--tertiary {background-color: $color-tertiary;}
     &--grey-light {background-color: $color-grey-light-1;}
 }
+
+.u-flex {
+    display: flex;
+}
+.u-flex-align-center {
+    align-items: center;
+}
+.u-flex-justify-center {
+    justify-content: center;
+}
