--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -13,6 +13,7 @@
 @import 'components/course';
 @import 'components/languages';
 @import 'components/accordion';
+@import 'components/circuit';
 
 @import 'layout/grid';
 @import 'layout/header';
