--- a/css/style.comp.css
+++ b/css/style.comp.css
@@ -162,7 +162,7 @@ img.responsive {
   top: 0;
   left: 0;
   width: 100%;
-  z-index: 9999;
+  z-index: 5000;
   padding: 0 5rem;
   display: flex;
   align-items: stretch;
@@ -612,14 +612,35 @@ img.responsive {
       background-color: #fff; }
   .profiles__title {
     font-size: 1.4rem; }
-  .profiles__description {
+  .profiles__container {
     flex: 1;
+    padding: 1.5rem;
+    border-left: 0.5rem solid #455aa4; }
+  .profiles__description {
     font-size: 1.6rem;
     font-weight: 300;
-    padding: 1.5rem;
     line-height: 1.4;
-    text-align: justify;
-    border-left: 0.5rem solid #455aa4; }
+    text-align: justify; }
+  .profiles__media {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    margin-top: 1rem; }
+  .profiles__link, .profiles__link:visited, .profiles__link:active, .profiles__link:focus {
+    display: inline-block;
+    background-color: #455aa4;
+    border-radius: 50%;
+    padding: .5rem;
+    line-height: 0; }
+  .profiles__link:hover {
+    background-color: #7bbce8; }
+  .profiles__link:not(:last-child) {
+    margin-right: 1rem; }
+  .profiles__icon {
+    width: 1.5rem;
+    height: 1.5rem;
+    fill: #fff; }
 
 .course {
   -webkit-box-shadow: 0px 0.5rem 0.5rem 0px rgba(0, 0, 0, 0.1);
@@ -984,6 +1005,22 @@ img.responsive {
     outline-color: currentColor;
     background-color: #ed7d26;
     border: 0; }
+
+.loader {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-image: linear-gradient(to right bottom, #fff, #f0f0f0);
+  z-index: 9999;
+  display: flex;
+  align-items: center;
+  justify-content: center; }
+  .loader img {
+    width: 100%;
+    height: auto;
+    max-width: 30rem; }
 
 .splide__slide {
   padding: 2.5rem; }
