--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -14,6 +14,7 @@
 @import 'components/languages';
 @import 'components/accordion';
 @import 'components/circuit';
+@import 'components/yt-item';
 
 @import 'layout/grid';
 @import 'layout/header';
