--- a/css/style.comp.css
+++ b/css/style.comp.css
@@ -854,6 +854,64 @@ img.responsive {
     .circuit__overlay > * {
       background: unset; }
 
+.yt-item {
+  display: grid;
+  column-gap: 5rem;
+  grid-template-columns: repeat(12, 1fr); }
+  .yt-item > * {
+    grid-row: 1 / 2; }
+  .yt-item:not(:last-of-type) {
+    padding-bottom: 5rem; }
+  .yt-item:nth-of-type(odd) {
+    grid-template-columns: 8fr 4fr; }
+  .yt-item:nth-of-type(even) {
+    grid-template-columns: 4fr 8fr; }
+  @media only screen and (max-width: 56.25em) {
+    .yt-item {
+      grid-template-columns: 100% !important; }
+      .yt-item > * {
+        grid-column: unset !important;
+        grid-row: unset !important; } }
+  .yt-item:nth-of-type(odd) .yt-item__video {
+    grid-column: 1 / 2; }
+  .yt-item:nth-of-type(even) .yt-item__video {
+    grid-column: 2 / 3; }
+  .yt-item:nth-of-type(odd) .yt-item__container {
+    grid-column: 2 / 3; }
+  .yt-item:nth-of-type(even) .yt-item__container {
+    grid-column: 1 / 2; }
+  .yt-item .yt-item__video {
+    width: 100%;
+    height: 0;
+    padding-bottom: 56.25%;
+    position: relative; }
+    .yt-item .yt-item__video iframe {
+      position: absolute;
+      left: 0;
+      top: 0;
+      height: 100%;
+      width: 100%; }
+  .yt-item__container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center; }
+  .yt-item__title {
+    font-size: 3rem;
+    font-weight: 800;
+    color: #455aa4; }
+    @media only screen and (max-width: 56.25em) {
+      .yt-item__title {
+        margin-top: 2rem;
+        font-size: 2rem; } }
+  .yt-item__description {
+    font-size: 1.8rem;
+    font-weight: 300;
+    letter-spacing: .2rem; }
+    @media only screen and (max-width: 56.25em) {
+      .yt-item__description {
+        font-size: 1.6rem;
+        letter-spacing: .1rem; } }
+
 .row {
   width: 100%;
   max-width: 140rem;
