--- a/src/sass/pages/_home.scss
+++ b/src/sass/pages/_home.scss
@@ -5,3 +5,11 @@
         padding: 1rem;
     }
 }
+
+.splide-full .splide__slide {
+    padding: 0;
+
+    @include respond(br4) {
+        padding: 0;
+    }
+}
