--- a/src/sass/base/_typography.scss
+++ b/src/sass/base/_typography.scss
@@ -1,13 +1,13 @@
 .heading-primary {
-    font-size: 9rem;
+    font-size: 6rem;
     font-weight: 900;
     text-transform: uppercase;
-    letter-spacing: .5rem;
+    letter-spacing: .2rem;
     line-height: 1.2;
     padding-bottom: 1rem;
 
     &--main {
-        color: $color-grey-dark;
+        color: $color-secondary;
 
         & span {
             &::before {
@@ -23,25 +23,17 @@
     }
 
     @include respond(br2) {
-        letter-spacing: .2rem;
-        font-size: 8rem;
-    }
-
-    @include respond(br3) {
-        letter-spacing: 0;
-        font-size: 7rem;
+        font-size: 5rem;
     }
 
     @include respond(br4) {
-        letter-spacing: 0;
-        font-size: 6rem;
+        font-size: 4rem;
         padding-bottom: 3rem;
     }
 
     @include respond(br5) {
         letter-spacing: 0;
-        font-size: 4.5rem;
-        padding-bottom: 3rem;
+        font-size: 3.5rem;
     }
 }
 
