added gdpr, cookies, js handlers

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -15,9 +15,12 @@
 @import 'components/accordion';
 @import 'components/circuit';
 @import 'components/yt-item';
+@import 'components/cookie';
+@import 'components/list';
 
 @import 'layout/grid';
 @import 'layout/header';
 @import 'layout/footer';
 
 @import 'pages/home';
+@import 'pages/cookie-policy';
