Added cookie section and gdpr, moved splide to imports

--- a/src/sass/components/_nav.scss
+++ b/src/sass/components/_nav.scss
@@ -24,6 +24,12 @@
         height: 6.5rem;
         margin-right: auto;
 
+        img {
+            display: block;
+            height: 100%;
+            width: auto;
+        }
+
         @include respond(br1) {
             height: 5.5rem;
         }
