Created a cool button

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -17,6 +17,7 @@
 @import 'components/yt-item';
 @import 'components/cookie';
 @import 'components/list';
+@import 'components/btn';
 
 @import 'layout/grid';
 @import 'layout/header';
