--- a/src/sass/components/_languages.scss
+++ b/src/sass/components/_languages.scss
@@ -26,7 +26,7 @@
             flex-direction: row;
             align-items: center;
             padding: 0;
-            order: 1;
+            order: 3;
         }
 
         &::before {
@@ -48,14 +48,20 @@
     &__icon {
         width: 2rem;
         height: 2rem;
+        
+        @include respond(menuMax) {
+            order: 1;
+        }
     }
 
     &__chevron {
         width: 2rem;
         height: 2rem;
+        fill: $color-grey;
 
         @include respond(menuMax) {
-            transform: rotate(90deg);
+            transform: rotate(-90deg);
+            order: 2;
         }
     }
 
@@ -77,7 +83,9 @@
         }
 
         @include respond(menuMax) {
-            margin-right: 1.5rem;
+            &:not(:last-child) {
+                margin-right: 1.5rem;
+            }
         }
     }
 
@@ -91,7 +99,7 @@
         transform: rotate(180deg);
 
         @include respond(menuMax) {
-            transform: rotate(-90deg);
+            transform: rotate(90deg);
         }
     }
 }
